k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: my-frontend
          image: ahasankhansysadm/ahasancustom:my-frontend1-tag
          ports:
            - containerPort: 3000  # Container port
