k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - name: openfrontend
      port: 80
      protocol: TCP
      targetPort: 3000
      nodePort: 30000
  type: NodePort
  sessionAffinity: ClientIP
